# Fetch-Simulation-Tutorial

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/lib/cube_test/: cube
catkin_ws/devel/lib/pkgconfig/: cube_test.pc  ddynamic_reconfigure.pc  fetch_calibration.pc  fetch_description.pc  fetch_gazebo_demo.pc  fetch_maps.pc  fetch_navigation.pc  fetch_tamp.pc  fetch_teleop.pc  fetchit_challenge.pc  image_publisher.pc  realsense2_description.pc
catkin_ws/src/cube_test/: package.xml
catkin_ws/src/cube_test/src/: cube.cpp  scenescan.py
devel/: .catkin  setup.sh
devel/include/pose_cnn/: Class.h  EachObject.h
devel/lib/pkgconfig/: fetch_calibration.pc  fetch_description.pc  fetch_maps.pc  fetch_moveit_config.pc  fetch_navigation.pc  fetch_teleop.pc  fetchit_challenge.pc  pose_cnn.pc  simple_grasping.pc
devel/share/fetch_calibration/cmake/: fetch_calibrationConfig.cmake
devel/share/fetch_goal_gnrt/cmake/: fetch_goal_gnrtConfig.cmake
devel/share/fetch_maps/cmake/: fetch_mapsConfig.cmake
devel/share/fetch_moveit_config/cmake/: fetch_moveit_configConfig.cmake
devel/share/fetch_navigation/cmake/: fetch_navigationConfig.cmake
devel/share/fetch_teleop/cmake/: fetch_teleopConfig.cmake
devel/share/fetchit_challenge/cmake/: fetchit_challenge-msg-paths.cmake
doc/: Error.md
fetch-robotics/devel/: .catkin  local_setup.sh
fetch-robotics/devel/lib/fetch_teleop/: joystick_teleop
fetch-robotics/devel/lib/pkgconfig/: fetch_calibration.pc  fetch_depth_layer.pc  fetch_description.pc  fetch_gazebo.pc  fetch_gazebo_demo.pc  fetch_goal_gnrt.pc  fetch_ikfast_plugin.pc  fetch_maps.pc  fetch_moveit_config.pc  fetch_navigation.pc  fetch_tamp.pc  fetch_teleop.pc  fetchit_challenge.pc
fetch-robotics/src/fetch_gazebo/fetch_gazebo_demo/: CMakeLists.txt
fetch-robotics/src/fetch_goal_gnrt/: CMakeLists.txt
fetch-robotics/src/fetch_goal_gnrt/config/: simple_grasping.yaml
fetch-robotics/src/fetch_goal_gnrt/launch/: pick_complex.launch  pick_cube.launch  tamp_pickplace.launch
fetch-robotics/src/fetch_goal_gnrt/map/: 2021_06_02_lab.yaml
fetch-robotics/src/fetch_goal_gnrt/scripts/: pick_ycb.py  t_pick_place.py
fetch-robotics/src/fetch_goal_gnrt/worlds/: ar_test.sdf  init_red.sdf
fetch-robotics/src/pose_cnn/: CMakeLists.txt  package.xml  requirement.txt
fetch-robotics/src/pose_cnn/lib/layers/: CMakeCache.txt  DartConfiguration.tcl  Eigen3Config.cmake  Eigen3ConfigVersion.cmake
fetch-robotics/src/pose_cnn/lib/layers/doc/: Doxyfile
fetch-robotics/src/pose_cnn/msg/: EachObject.msg
fetch-robotics/src/pose_cnn/ros/: posecnn.rviz  test_images.py
fetch_test/: .rosinstall.bak
fetch_test/devel/: .catkin  local_setup.sh  setup.sh
fetch_test/devel/lib/fetch_teleop/: joystick_teleop
fetch_test/devel/lib/pkgconfig/: fetch_calibration.pc  fetch_depth_layer.pc  fetch_description.pc  fetch_gazebo.pc  fetch_gazebo_demo.pc  fetch_ikfast_plugin.pc  fetch_maps.pc  fetch_moveit_config.pc  fetch_navigation.pc  (+14 more)
fetch_ws/: array.pcd  b_cube_extraction.pcd  b_cube_extraction0.pcd  b_cube_extraction01.pcd  b_cube_extraction012.pcd  b_cube_extraction0123.pcd  cube_extraction.pcd  remove_plane.pcd  test.pcd  yes.pcd
fetch_ws/devel/: .catkin  .rosinstall
fetch_ws/src/cube_test/: CMakeLists.txt  package.xml
fetch_ws/src/fetch_gazebo/fetch_object_recog/: CMakeLists.txt
fetch_ws/src/fetch_gazebo/fetch_object_recog/scripts/: detect_object.cpp
fetch_ws/src/fetch_goal_gnrt/: CMakeLists.txt
fetch_ws/src/fetch_goal_gnrt/launch/: ar_tag.launch  demo_pick_place.launch  fetch_pick_place.launch  pick_cube.launch  ycb_pick_place.launch
fetch_ws/src/fetch_goal_gnrt/models/coffeetable/: model.sdf
fetch_ws/src/fetch_goal_gnrt/models/cubes/blue_cube/: model.config  model.sdf
fetch_ws/src/fetch_goal_gnrt/models/cubes/red_cube/: model.sdf
fetch_ws/src/fetch_goal_gnrt/models/cylinder/: model.sdf
fetch_ws/src/fetch_goal_gnrt/models/plates/blue_plate/: model.sdf
fetch_ws/src/fetch_goal_gnrt/models/plates/red_plate/: model.sdf
fetch_ws/src/fetch_goal_gnrt/models/visp_tag/: model.sdf
fetch_ws/src/fetch_goal_gnrt/robots/: fetch_gazebo.urdf
fetch_ws/src/fetch_goal_gnrt/scripts/: final_cube_pickplace.py  pick_cubes.cpp  pick_cubes.py  pick_demo.py  pick_place.py  t_pick_place.py
fetch_ws/src/fetch_goal_gnrt/worlds/: complex.sdf  init_red.sdf  visp_test.sdf
fetch_ws/src/pose_cnn/: frames.gv
src/cube_test/: CMakeLists.txt
src/fetch_goal_gnrt/: CMakeLists.txt
src/fetch_goal_gnrt/launch/: demo_pick_place.launch  octomap.launch  visp_tag.launch
src/fetch_goal_gnrt/scripts/: pick_cubes.cpp  pick_ycb.py
src/fetch_goal_gnrt/worlds/: goal.sdf  init_red.sdf
src/pose_cnn/msg/: Class.msg
src/pose_cnn/ros/: posecnn.rviz
(+240 files in other folders)
