<?xml version="1.0"?>
<package format="2">
  <name>pose_cnn</name>
  <version>0.0.0</version>
  <description>The ros wrapper for pose cnn</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="glab@todo.todo">glab</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>fetch_gazebo</exec_depend>
  <exec_depend>fetch_moveit_config</exec_depend>
  <exec_depend>fetch_navigation</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_python</exec_depend>
  <exec_depend>simple_grasping</exec_depend>

</package>
